# ComfyUI_SparkTTS

./: AudioRecorderSpark.py  MWAudioRecorderSpark.py  README-CN.md  README-en.md  README.md  SparkTTS.py  SparkTTSNode.py  __init__.py  pyproject.toml  requirements.txt
sparktts/utils/: audio.py  token_parser.py
